[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/StyleBox/PaperSwatch.tres" type="StyleBox" id=1]
[ext_resource path="res://src/UI/Theme/InsetMenu.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/Options/Settings.gd" type="Script" id=6]

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
p_master = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Master")
p_sfx = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/SFX")
p_music = NodePath("MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Music")

[node name="Panel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 272.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 272.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 256.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 240.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 448.0
margin_bottom = 142.0
size_flags_horizontal = 3
alignment = 1

[node name="Master" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Master"]
margin_right = 448.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Master Volume: 100%"
align = 1

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Master"]
margin_top = 18.0
margin_right = 448.0
margin_bottom = 34.0
size_flags_horizontal = 7
max_value = 20.0
value = 10.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 448.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Music"]
margin_top = 1.0
margin_right = 222.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music Volume: 100%"
align = 2

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Music"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 16.0
size_flags_horizontal = 7
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 448.0
margin_bottom = 74.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/SFX"]
margin_top = 1.0
margin_right = 222.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "SFX Volume: 100%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/SFX"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayMode" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 448.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DisplayMode"]
margin_top = 11.0
margin_right = 222.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Display Mode"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DisplayMode"]
margin_left = 226.0
margin_right = 311.0
margin_bottom = 36.0
size_flags_horizontal = 2
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Borderless", null, false, 1, null, "FullScreen", null, false, 2, null ]
selected = 0

[node name="ResolutionScale" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 448.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ResolutionScale"]
margin_top = 11.0
margin_right = 97.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.505882, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_shadow = Color( 0.423529, 0.192157, 0.101961, 0 )
text = "Resolution Scale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ResolutionScale/Label"]
show_behind_parent = true
margin_top = -11.0
margin_right = 157.0
margin_bottom = 24.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ResolutionScale"]
margin_left = 101.0
margin_right = 157.0
margin_bottom = 36.0
text = "Auto"
items = [ "Auto", null, false, 0, null, "1x", null, false, 1, null, "2x", null, false, 2, null, "3x", null, false, 3, null, "4x", null, false, 4, null ]
selected = 0

[node name="DeleteSave" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 448.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DeleteSave"]
margin_top = 5.0
margin_right = 222.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Delete all Data (Debug)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DeleteSave"]
margin_left = 226.0
margin_right = 244.0
margin_bottom = 24.0
size_flags_horizontal = 2
text = ":("

[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Master/Slider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Music/Slider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/SFX/Slider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DisplayMode/OptionButton" to="." method="_on_DisplayMode_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ResolutionScale/OptionButton" to="." method="_on_ResolutionScale_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/DeleteSave/Button" to="." method="_on_DeleteSave_pressed"]
